ingress/ingress-rule.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: test-ingress
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt-issuer
    kubernetes.io/ingress.class: nginx
    nginx.ingress.kubernetes.io/proxy-body-size: "1g"
spec:
  ingressClassName: nginx
  rules:
    - host: "test.com"
      http:
        paths:
          - pathType: Prefix
            backend:
              service:
                name: test-svc
                port:
                  number: 80
            path: "/"
  tls:
    - hosts:
        - test.com
      secretName: example-tls
